# fz-wordle-rust

./: Cargo.toml  README.md  build.rs
data/: dict.txt
src/: dict.rs  main.rs  solver.rs
