cargo-features = ["different-binary-name"]

[package]
name = "fz-wordle-rust"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
autobins = false
autoexamples = false
autotests = false
autobenches = false

[[bin]]
name = "fz-wordle-rust"
filename = "wordle-solver.fap"
bench = false
test = false

[dependencies]
flipperzero = { version = "0.16.0", default-features = false }
flipperzero-sys = { version = "0.16.0" }
flipperzero-rt = { version = "0.16.0" }
